# sdrac_software_low

./: .clang-format  .clangd  .gitignore  .gitmodules  .mxproject  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  STM32F412RGTx_FLASH.ld  after_ioc.sh  auto-usb-flash.sh  build-firmware.sh  compile_commands.json  data.csv  flash.sh  init-build.sh  open-usb-terminal.sh  requirements.txt  sdrac_cubemx.ioc  stm32f412rgtx_flash.ld  update-software-version.sh  usb-flash.sh
.github/workflows/: cmake-build.yml
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c
Middlewares/ST/STM32_USB_Device_Library/Class/DFU/Src/: usbd_dfu.c  usbd_dfu_media_template.c
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c  usbd_dfu_if.c  usbd_dfu_if.h
app/: config.cpp  config.hpp  config_struct.hpp  id_config.hpp  main_prog.cpp  main_prog.hpp  main_prog_callbacks.cpp  pin.hpp  version.hpp
app/BOARD_ID/inc/: board_id.hpp
app/BoardId/inc/: board_id.hpp
app/BoardId/src/: board_id.cpp
app/CanControl/inc/: CanDB.h  can_control.hpp
app/CanControl/src/: CanDB.c  can_control.cpp
app/Contolers/inc/: basic_controler.hpp  pass_through_controler.hpp
app/Contolers/src/: basic_controler.cpp  pass_through_controler.cpp  pid_controler.cpp
app/Encoder/inc/: encoder.hpp
app/Encoder/src/: encoder.cpp
app/EngineControl/inc/: engine_controler.hpp  linear_ec.hpp
app/EngineControl/src/: engine_controler.cpp  linear_ec.cpp
app/Filter/inc/: filter.hpp  filter_alfa_beta.hpp
app/Filter/src/: filter.cpp  filter_moving_avarage.cpp
app/Gpio/inc/: pin.hpp
app/Logger/inc/: logger.hpp
app/Logger/src/: logger.cpp
app/Memory/inc/: fram_menager.hpp  sram_menager.hpp
app/Memory/src/: fram_menager.cpp  sram_menager.cpp
app/MovementControl/inc/: movement_controler.hpp
app/MovementControl/src/: movement_controler.cpp
app/NtcTemperature_sensors/inc/: ntc_termistors.hpp
app/NtcTemperature_sensors/src/: ntc_termistors.cpp
app/PD/inc/: pd_controler.hpp
app/PD/src/: pd_controler.cpp
app/PID/inc/: pid_controler.hpp
app/PID/src/: pid_controler.cpp
app/SteperMotor/inc/: steper_motor.hpp
app/SteperMotor/src/: steper_motor.cpp
app/Temperature_sensors/inc/: MCP9700AT.hpp  ntc_termistors.hpp
app/Temperature_sensors/src/: MCP9700AT.cpp  ntc_termistors.cpp
app/Timing/inc/: Timing.hpp
app/Timing/src/: Timing.cpp
app/UsbPrograming/inc/: usb_programer.hpp
app/UsbPrograming/src/: usb_programer.cpp
app/inc/: encoder.h  encoder.hpp  logger.h  logger.hpp  main_prog.h  main_prog.hpp
app/lib/: main_prog.h
app/list/inc/: list.hpp
app/src/: encoder.c  encoder.cpp  logger.c  logger.cpp  main_prog.c  main_prog.cpp
canbus/: can.dbc
cmake/: gcc-arm-none-eabi.cmake
cmake.old/: CMakeLists_old.cmake
cmake/stm32cubemx/: CMakeLists.txt
docker/: Dockerfile  build-docker-image.sh
lib/: config.cpp  config.hpp  main_prog.cpp  version.hpp
lib/BoardId/src/: board_id.cpp
lib/CanControl/inc/: can_control.hpp
lib/CanControl/src/: can_control.cpp
lib/Contolers/inc/: pid_controler.hpp
lib/Contolers/src/: pid_controler.cpp
lib/Encoder/inc/: encoder.hpp
lib/Encoder/src/: encoder.cpp
lib/Filter/inc/: filter.hpp  filter_moving_avarage.hpp
lib/Filter/src/: filter_alfa_beta.cpp
lib/Gpio/inc/: pin.hpp
lib/Logger/inc/: logger.hpp
lib/Logger/src/: logger.cpp
lib/Memory/src/: fram_menager.cpp
lib/MovementControl/src/: movement_controler.cpp
lib/SteperMotor/inc/: steper_motor.hpp
lib/SteperMotor/src/: steper_motor.cpp
lib/Temperature_sensors/inc/: ntc_termistors.hpp
lib/Temperature_sensors/src/: MCP9700AT.cpp  ntc_termistors.cpp
lib/containers/inc/: circular_buffor.hpp  list.hpp
lib/list/inc/: circular_buffor.hpp  list.hpp
log/: latest_list
logs/: json_log_data.json
matlab_filters/: filtr_config.m  test filtre.m  untitled.fda
measures/: data 1000hz.csv  data.csv  data_bin.csv  data_enc_pos_timc.csv  data_enc_vel.csv  data_pos_vel_tim.csv
pid_config/: simulate_pid.py
scripts/: alpha_beta.py  display_data.py  measure_interpreter.py  read_serila_port.py  simulate_pid.py
scripts/encoder_programer/: README.md  i2c-encoder-programer.ino
scripts/python/: alpha_beta.py  measure_interpreter.py  read_serila_port.py  requirements.txt  simulate_pid.py  stuff.py  test_can.py
scripts/shell/: find-sdrac-board-usb.sh  update-software-version.sh  usb-flash.sh
src/: FreeRTOSConfig.h  config.cpp  config.hpp  main_prog.cpp  main_prog.hpp  main_prog_callbacks.cpp  main_prog_tasks.cpp  version.hpp
toolchain/: arm-none-eabi.cmake
